# cargo

./: CMakeLists.txt  LICENSE  README  README.md  mkmake.sh  wscript
src/: CMakeLists.txt
src/cmake/: FindNumpy.cmake
src/cpp/: CMakeLists.txt
src/cpp/statistics/: CMakeLists.txt  Makefile  Makefile.extra  _statistics.cc  _tables.cc  array_notes.txt  core_math.cc  core_math.h  dcm.cc  dcm.h  family.h  make.cs.sh  multinomial.h  numpy.h  numpy_array.cc  numpy_array.h  portfolio.h  stats.h  vector_distribution.h  vector_mixture.h
src/cpp/statistics/scratch/: stats.cc  testing.txt
src/cpp/utexas/: CMakeLists.txt  array_packing.h  assert.h
src/cpp/utexas/python/: CMakeLists.txt  CMakeLists.txt_up  Makefile  _statistics.cc  array_notes.txt  get_shared_ptr.h  make.zg.sh  numpy.cc  numpy.h  numpy_array.cc  numpy_array.h  numpy_symbol.cc  numpy_symbol.h  old_dcm.h  old_multinomial.h  randomness.cc  randomness.h
src/cpp/utexas/statistics/: CMakeLists.txt  core_math.cc  core_math.h  dcm.h  em_mixture_estimator.h  estimator.h  multinomial.cc  multinomial.h  multinomial_estimator.h  portfolio.cc  portfolio.h  tuple_distribution.h  vector_distribution.h
src/cpp/utexas/test/: CMakeLists.txt  ut_test.cc
src/cpp/utexas/test/statistics/: CMakeLists.txt  multinomial.cc  ut_test_statistics.cc
src/python/: CMakeLists.txt  wscript
src/python/cargo/: CMakeLists.txt  __init__.py  bases.py  concurrent.py  condor.py  defaults.py  errors.py  flags.py  io.py  iterators.py  json.py  kit.py  labor.py  labor2.py  log.py  numpy.py  plot.py  profile.py  random.py  sugar.py  temporal.py  testing.py  wscript
src/python/cargo/_files/: CMakeLists.txt
src/python/cargo/_files/for_tests/: CMakeLists.txt  echo_and_exit
src/python/cargo/condor/: host.py  spawn.py  submit.py
src/python/cargo/gsl/: CMakeLists.txt  __init__.py  errno.pxd  errno.pyx  randist.pxd  randist.pyx  sf.pxd  sf.pyx
src/python/cargo/gsl/test/: CMakeLists.txt  test_sf.py
src/python/cargo/labor/: CMakeLists.txt  condor.py  jobs.py  storage.py  worker.py
src/python/cargo/llvm/: CMakeLists.txt  __init__.py  _high_level.pyx  constructs.py  high_level.py  high_level.pyx  lowloop.py  support.pyx
src/python/cargo/llvm/test/: CMakeLists.txt  test_constructs.py  test_high.py  test_lowloop.py
src/python/cargo/sql/: CMakeLists.txt  __init__.py  actions.py  alchemy.py  wscript
src/python/cargo/sql/test/: CMakeLists.txt  test_alchemy.py  wscript
src/python/cargo/statistics/: CMakeLists.txt  __init__.py  _dcm.pyx  _functions.pyx  _multinomial.pyx  base.py  binomial.py  binomial.pyx  categorical.py  constant.py  dcm.py  dcm.pyx  delta.py  discrete.py  discrete.pyx  distribution.py  functions.py  functions.pyx  gaussian.pyx  lowloop.py  mixture.py  mixture.pyx  multinomial.py  multinomial.pyx  tuple.py  tuple.pyx
src/python/cargo/statistics/test/: CMakeLists.txt  test_base.py  test_binomial.py  test_constant.py  test_dcm.py  test_delta.py  test_discrete.py  test_distribution.py  test_functions.py  test_lowloop.py  test_mixture.py  test_multinomial.py  test_tuple.py
src/python/cargo/test/: CMakeLists.txt  test_io.py  test_iterators.py  test_json.py  test_numpy.py  test_random.py  test_sugar.py  test_temporal.py  wscript
src/python/cargo/tools/: CMakeLists.txt  triggered.py  wscript
src/python/cargo/tools/labor/: CMakeLists.txt  delete.py  submit.py  submit2.py  work.py  work2.py  wscript
src/python/cargo/tools/sql/: CMakeLists.txt  copy.py  describe.py  prune.py  wscript
src/python/cargo/tools/sql/test/: CMakeLists.txt  wscript
src/python/cargo/unix/: CMakeLists.txt  accounting.py  proc.py  sessions.py  wscript
src/scripts/: run_cmake
